--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "express": "^4.17.1",
     "jsonschema": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "pg": "^8.6.0"
+  },
+  "devDependencies": {
+    "supertest": "^6.1.3"
   }
 }
